welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:32: error: missing arguments for method && in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
		if(getY==getMondeLargeur()&&ligne=1){
                                          ^ZigZag:36: error: missing arguments for method && in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
		else if(getY==0&&ligne=(-1)){
                               ^